# kairos

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: kairos.rb
cmd/kairos/: mcp.go  mcp_transport.go  root.go  start.go  status.go  stop.go  version.go  version_test.go
dashboard/: embed.go  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
docs/: api.md  configuration.md  mcp.md  pypi-publishing.md  python-sdk.md  security-audit.md
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go  daemon_test.go
internal/inference/: context.go  context_bench_test.go  context_test.go  doc.go  integration_test.go  llamacpp.go  llamacpp_test.go  manager.go  manager_test.go  ollama.go  ollama_test.go  provider.go  stream.go  toolloop.go  toolloop_test.go  types.go
internal/logging/: logging.go  logging_test.go
internal/mcp/: client.go  client_test.go  handlers.go  handlers_test.go  http.go  integration_test.go  server.go  (+1 more)
scripts/: README.md  loadtest.sh  seed-demo.sh
sdk-python/: README.md  pyproject.toml
sdk-python/src/kairos_sdk/: __init__.py  client.py  evaluators.py  models.py
sdk-python/tests/: test_client.py
vecstore/: Cargo.toml  build.rs  cbindgen.toml
vecstore/src/: engine.rs  lib.rs
(+146 files in other folders)
